--- a/myProject/pages/score/scorePageStyle.css
+++ b/myProject/pages/score/scorePageStyle.css
@@ -1,3 +1,13 @@
+#allRecords{
+    display: flex;
+    flex-flow:column;
+    position: relative;
+    align-items: center;
+    width: 500px;
+    height: 800px; 
+    margin-left: 450px;
+}
+
 table{
     border: 4px solid black;
 }
