--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -1,17 +1,41 @@
-* {
+/* * {
     box-sizing: border-box;
-    /* ????? */
+    /* max-width: 100%; 
+} */
+:-webkit-scrollbar {
+    width: 0;
 }
+
 #allGame{
+    overflow: hidden;
     display: flex;
-    justify-content: space-between;
-    align-content: center;
-    position: relative;
-    padding: 50px;
+    justify-content: space-around;
+    align-items: center;
+    position: relative; 
     width: 1000px;
-    height: 650px; 
+    height: 700px;
     margin: 0 auto;
 }
+/* .pixel {
+    /* Start the shake animation and make the animation last for 0.5 seconds 
+    animation:0.5s shake;
+    /* When the animation is finished, start again 
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+} */
 
 /* .menu .playingField{
     position: fixed;
@@ -40,9 +64,10 @@
 }
 
 .menu{
-    position: absolute; 
+    /* position: absolute;  */
     display: flex;
     flex-flow: column;
+    align-self: center;
     align-items: center;
     top:50px; 
     right:50px;
@@ -53,12 +78,13 @@
 
 
 .field {
+    position: relative;
     width: 650px;
     height: 650px;
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
-    margin-right: 100px;
+    /* margin: 0 auto; */
+    /* margin-right: 100px; */
 }
 
 .startPixel {
