--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -1,14 +1,15 @@
 body{
-    min-width: 1100px;
+     min-width: 1000px; 
+     min-height: 700px; 
 }
-::-webkit-scrollbar {
+:-webkit-scrollbar {
     width: 0;
 }
 
 .app {
     overflow: hidden;
     /* Отображается только область внутри элемента, остальное будет скрыто. */
-    position: fixed;
+    position: fixed; 
     width: 100%;
     padding-bottom: 50%;
     height: 100%;
