--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -2,19 +2,28 @@
     box-sizing: border-box;
     /* max-width: 100%; 
 } */
-:-webkit-scrollbar {
-    width: 0;
+body{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #allGame{
-    overflow: hidden;
-    display: flex;
+
+     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: relative; 
-    width: 1000px;
-    height: 700px;
-    margin: 0 auto;
+    position: relative;  
+    /* width: 100%;
+    height: 100%;*/
+    max-width: 1000px;
+    height: 700px; 
+   
+    /* width: 100%;
+    height: 100vh; */
+    /* width: 1000px;
+    height: 700px;  */
+     margin: 0 auto; 
 }
 /* .pixel {
     /* Start the shake animation and make the animation last for 0.5 seconds 
@@ -77,14 +86,17 @@
 }
 
 
+
+
 .field {
+
     position: relative;
     width: 650px;
     height: 650px;
+    min-width: 650px;
+    min-height: 650px;
     display: flex;
     flex-wrap: wrap;
-    /* margin: 0 auto; */
-    /* margin-right: 100px; */
 }
 
 .startPixel {
