--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -1,7 +1,7 @@
-body{
+/* body{
      min-width: 1000px; 
      min-height: 700px; 
-}
+} */
 :-webkit-scrollbar {
     width: 0;
 }
@@ -13,7 +13,7 @@ body{
     width: 100%;
     padding-bottom: 50%;
     height: 100%;
-    background: url(clouds/squares_glow_blue.png);
+     background: url(clouds/squares_glow_blue.png); 
     background-size: 40%;
     /*масштабирование фона */
     background-position: 0px 13px;
@@ -22,6 +22,11 @@ body{
 #content {
     position: relative;
     z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 
@@ -63,17 +68,18 @@ body{
     animation: animCloud 80s infinite linear;
 }
 
-
-#content {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-}
 #content a {
     display: flex;
     font-family: 'IBM Plex Sans Arabic', sans-serif;
+    /* font-size: 2em; */
     font-size: 30px;
     text-decoration: none;
     margin: 15px;
     color: black;
+}
+#musicIcon{
+    width: 30px;
+    height: 30px;
+    background-image:url(../game/img/icon_nomusic.png); 
+    background-size: 100%;
 }
