--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -25,12 +25,12 @@ body{
     height: 700px;  */
      margin: 0 auto; 
 }
-/* .pixel {
+/* .pixel:hover {
     /* Start the shake animation and make the animation last for 0.5 seconds 
     animation:0.5s shake;
     /* When the animation is finished, start again 
-    animation-iteration-count: infinite;
-}
+    /* animation-iteration-count: infinite; 
+} */
 
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -44,18 +44,17 @@ body{
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-} */
+}
 
-/* .menu .playingField{
+ /* .menu .playingField{
     position: fixed;
-} */
-/* .playingField{
+} 
+ .playingField{
     margin-right: 100px;
-} */
+}  */
 
  .menu span{
-    margin: 10px;
-    
+    margin: 10px;   
 } 
 .menu button{
     background-color: #07848a; 
@@ -68,8 +67,7 @@ body{
     inset rgba(0,0,0,.3) -5px -5px 8px 5px,
     1px 1px 1px rgba(255,255,255,.1),
     -2px -2px 5px rgba(0,0,0,.5); 
-    width: 150px;
-    
+    width: 150px;   
 }
 
 .menu{
