--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -75,7 +75,7 @@
     font-size: 30px;
     text-decoration: none;
     margin: 15px;
-    color: black;
+    color: #39230e;
 }
 #musicIcon{
     width: 30px;
