--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -1,15 +1,15 @@
 
 body,html{
-    width: 100%;
-    height: 100%;
+     width: 100%;
+    height: 100%; 
+    min-width: 1000px;
+    min-height: 750px;
     overflow: hidden;
 }
 
 #allGame{
-    min-width: 1000px;
-    max-width: 1000px;
-    max-height: 700px; 
-    min-height: 700px;
+    max-width: 1200px;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -23,8 +23,8 @@ body,html{
     width: 100%;}
 
   } */
- /* @media (orientation: landscape) { 
-    #allGame {transform: scale(0.8);}
+ /* @media (max-height:750px) { 
+    #allGame {transform: scale(0.9);}
 
   } */
 
@@ -68,7 +68,6 @@ body,html{
 }
 
 .menu{
-    /* position: absolute;  */
     display: flex;
     flex-flow: column;
     align-self: center;
@@ -78,7 +77,7 @@ body,html{
     font-family: 'IBM Plex Sans Arabic', sans-serif; 
     font-size: 30px;
     color: #39230e;
-    position: relative;
+    z-index: 1;
 }
 
 
@@ -88,6 +87,8 @@ body,html{
     position: relative;
     width: 650px;
     height: 650px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
 }
