--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -1,7 +1,9 @@
-/* body{
-     min-width: 1000px; 
-     min-height: 700px; 
-} */
+body{
+     font-family: cursive; 
+     /* min-width: 1000px; 
+     min-height: 700px;  */
+     
+}
 :-webkit-scrollbar {
     width: 0;
 }
@@ -70,7 +72,7 @@
 
 #content a {
     display: flex;
-    font-family: 'IBM Plex Sans Arabic', sans-serif;
+    font-family: inherit;
     /* font-size: 2em; */
     font-size: 30px;
     text-decoration: none;
