--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -1,10 +1,9 @@
 
 body,html{
-     width: 100%;
+    width: 100%;
     height: 100%; 
-    /* min-width: 1000px;
-    min-height: 750px; */
     overflow: hidden;
+    position: relative;
 }
 
 #allGame{
@@ -39,7 +38,7 @@ transform:translate(-50%, -50%);
  button{
     background-color: #057479; 
     margin: 15px;
-    font-size: 30px;
+    font-size: 25px;
     color: #39230e;
     border-radius: 10%;
     box-shadow:
@@ -168,6 +167,9 @@ transform:translate(-50%, -50%);
 }
 
 @media (max-width: 1200px){
+    #allGame{
+        width: 1200px;
+    }
     .pixel {
         width: 50px;
         height: 50px;}
@@ -182,6 +184,9 @@ transform:translate(-50%, -50%);
 
 }
 @media (max-width: 992px){
+    #allGame{
+width: 992px;
+    }
     .pixel {
         width: 40px;
         height: 40px;}
