--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -185,7 +185,7 @@ transform:translate(-50%, -50%);
 }
 @media (max-width: 992px){
     #allGame{
-width: 992px;
+max-width: 992px;
     }
     .pixel {
         width: 30px;
