--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -1,21 +1,15 @@
 
-body,html{
-    width: 100%;
-    height: 100%; 
-    overflow: hidden;
-    position: relative;
-}
 
 #allGame{
 position: absolute;
+width: 1100px;
 top: 50%;
 left: 50%;
 transform:translate(-50%, -50%);
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
 }
 
 @keyframes shake {
@@ -61,6 +55,7 @@ transform:translate(-50%, -50%);
     font-family: inherit; 
     font-size: 30px;
     color: #39230e;
+    /* margin: 50px; */
     z-index: 1;
 }
 
@@ -168,24 +163,40 @@ transform:translate(-50%, -50%);
 
 @media (max-width: 1200px){
     #allGame{
-        width: 1200px;
+         width: 992px;   
+    }
+    .menu{
+        font-size: 20px;
+    }
+    button{
+        font-size: 20px; 
+        width: 130px;
+        height: 40px;
     }
     .pixel {
-        width: 50px;
-        height: 50px;}
+        width: 40px;
+        height: 40px;}
         .car {
-            width: 25px;
-            height: 25px;}
+            width: 20px;
+            height: 20px;}
          .field{
 
-          width: 650px;
-            height: 650px;}
+          width: 520px;
+            height: 520px;}
 
 
 }
 @media (max-width: 992px){
     #allGame{
-max-width: 992px;
+max-width: 650px;
+    }
+    .menu{
+        font-size: 16px;
+    }
+    button{
+        font-size: 16px; 
+        width: 100px;
+        height: 30px;
     }
     .pixel {
         width: 30px;
@@ -200,5 +211,17 @@ max-width: 992px;
     
 }
 @media (max-width: 650px){
-    
-}
+    #allGame{
+        max-width: 650px;
+            }
+            .pixel {
+                width: 25px;
+                height: 25px;}
+                .car {
+                    width: 12.5px;
+                    height: 12.5px;}
+                 .field{
+        
+                  width: 325px;
+                    height: 325px;}   
+        }
