--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -1,7 +1,11 @@
-body{
+body,html{
      font-family: cursive; 
-     /* min-width: 1000px; 
-     min-height: 700px;  */
+     color: #39230e;
+        width: 100%;
+        height: 100%; 
+        overflow: hidden;
+        position: relative;
+    
      
 }
 :-webkit-scrollbar {
@@ -11,10 +15,10 @@ body{
 .app {
     overflow: hidden;
     /* Отображается только область внутри элемента, остальное будет скрыто. */
-    position: fixed; 
-    width: 100%;
+    position: relative; 
+    width: 100%; 
     padding-bottom: 50%;
-    height: 100%;
+     height: 100%; 
      background: url(clouds/squares_glow_blue.png); 
     background-size: 40%;
     /*масштабирование фона */
@@ -22,13 +26,15 @@ body{
 }
 
 #content {
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    z-index: 1; 
     display: flex;
     flex-flow: column;
     align-items: center;
+    text-align: center;
 }
 
 
@@ -73,12 +79,12 @@ body{
 #content a {
     display: flex;
     font-family: inherit;
-    /* font-size: 2em; */
     font-size: 30px;
     text-decoration: none;
     margin: 15px;
     color: #39230e;
 }
+
 #musicIcon{
     width: 30px;
     height: 30px;
