--- a/myProject/pages/score/scorePageStyle.css
+++ b/myProject/pages/score/scorePageStyle.css
@@ -1,7 +1,10 @@
 #allRecords{
     display: flex;
     flex-flow:column;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
     align-items: center;
 }
 
