--- a/myProject/pages/main/mainPageStyle.css
+++ b/myProject/pages/main/mainPageStyle.css
@@ -1,4 +1,4 @@
-body,html{
+html, body{
      font-family: cursive; 
      color: #39230e;
         width: 100%;
@@ -17,8 +17,7 @@ body,html{
     /* Отображается только область внутри элемента, остальное будет скрыто. */
     position: relative; 
     width: 100%; 
-    padding-bottom: 50%;
-     height: 100%; 
+    padding-bottom: 50%; 
      background: url(clouds/squares_glow_blue.png); 
     background-size: 40%;
     /*масштабирование фона */
