--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -161,7 +161,7 @@ align-items: center;
     font-size: 30px;
 }
 
-@media (max-width: 1200px){
+/* @media (max-width: 1200px){
     #allGame{
          width: 992px;   
     }
@@ -209,19 +209,19 @@ max-width: 650px;
           width: 390px;
             height: 390px;}
     
-}
-@media (max-width: 650px){
+} */
+@media (max-height: 450px){ /*только для устройств с высотой области просмотра не более 400px*/
     #allGame{
         max-width: 650px;
             }
             .pixel {
-                width: 20px;
-                height: 20px;}
+                width: 25px;
+                height: 25px;}
                 .car {
-                    width: 10px;
-                    height: 10px;}
+                    width: 12.5px;
+                    height: 12.5px;}
                  .field{
         
-                  width: 260px;
-                    height: 260px;}   
+                  width: 325px;
+                    height: 325px;}   
         }
