--- a/myProject/pages/game/gamePageStyle.css
+++ b/myProject/pages/game/gamePageStyle.css
@@ -210,7 +210,7 @@ max-width: 650px;
             height: 390px;}
     
 } */
-@media (max-height: 450px){ /*только для устройств с высотой области просмотра не более 400px*/
+@media (max-height: 450px){ /*только для устройств с высотой области просмотра не более 450px*/
     #allGame{
         max-width: 650px;
             }
@@ -222,7 +222,7 @@ max-width: 650px;
         height: 10px;}
     .field{
         width: 260px;
-        height: 260px;}   
+        height: 260px;   
         }
     .menu{
         font-size: 16px;
@@ -232,3 +232,4 @@ max-width: 650px;
         width: 100px;
         height: 30px;
         }
+    }
