--- a/myProject/pages/score/scorePageStyle.css
+++ b/myProject/pages/score/scorePageStyle.css
@@ -32,4 +32,22 @@ caption{
     font-family: inherit;
     font-size: 30px;
 }
+@media (max-height: 450px){
+    table{
+        width: 180px;
+        height: 180px; 
+        margin: 10px; 
+    }
+    th, tr{
+        font-size: 8px;
+        width: 40px;
+        height: 20px;
+    }
+    caption{
+        color: inherit;
+        margin: 10px;
+        font-family: inherit;
+        font-size: 12px;
+    }
 
+}
